--- a/snapcraft.yaml
+++ b/snapcraft.yaml
@@ -6,9 +6,8 @@ confinement: strict
 compression: lzo
 architectures:
   - build-on: amd64
-    build-for: amd64
-
-
+  - build-on: armhf
+  - build-on: arm64
 slots:
   feathernotes:
     interface: dbus
@@ -51,7 +50,7 @@ parts:
       - libqt5xml5
     
     build-snaps:
-      - kf5-5-104-qt-5-15-8-core22-sdk
+      - kf5-5-105-qt-5-15-9-core22-sdk
       - cmake
       
     override-pull: |
