--- a/snapcraft.yaml
+++ b/snapcraft.yaml
@@ -40,8 +40,8 @@ parts:
     build-packages:
       - build-essential
       - libhunspell-dev
-    build-snaps:
-      - kf5-5-105-qt-5-15-9-core22-sdk
+      - libx11-dev
+      - libxext-dev
     override-pull: |
       craftctl default
       craftctl set version=$(git describe --tags --abbrev=0)
