--- a/snapcraft.yaml
+++ b/snapcraft.yaml
@@ -7,7 +7,30 @@ compression: lzo
 architectures:
   - build-on: amd64
     build-for: amd64
-    
+layout:
+  /usr/share/X11:
+    symlink: $SNAP/kf5/usr/share/X11
+  /usr/share/qt5:
+    bind: $SNAP/usr/share/qt5
+
+
+plugs:
+    desktop:
+        mount-host-font-cache: false
+    icon-themes:
+        interface: content
+        target: $SNAP/data-dir/icons
+        default-provider: gtk-common-themes
+    sound-themes:
+        interface: content
+        target: $SNAP/data-dir/sounds
+        default-provider: gtk-common-themes
+    kf5-5-105-qt-5-15-9-core22:
+        content: kf5-5-105-qt-5-15-9-core22-all
+        interface: content
+        default-provider: kf5-5-105-qt-5-15-9-core22
+        target: $SNAP/kf5
+
 slots:
   feathernotes:
     interface: dbus
