--- a/snapcraft.yaml
+++ b/snapcraft.yaml
@@ -7,29 +7,6 @@ compression: lzo
 architectures:
   - build-on: amd64
     build-for: amd64
-layout:
-  /usr/share/X11:
-    symlink: $SNAP/kf5/usr/share/X11
-  /usr/share/qt5:
-    bind: $SNAP/usr/share/qt5
-
-
-plugs:
-    desktop:
-        mount-host-font-cache: false
-    icon-themes:
-        interface: content
-        target: $SNAP/data-dir/icons
-        default-provider: gtk-common-themes
-    sound-themes:
-        interface: content
-        target: $SNAP/data-dir/sounds
-        default-provider: gtk-common-themes
-    kf5-5-105-qt-5-15-9-core22:
-        content: kf5-5-105-qt-5-15-9-core22-all
-        interface: content
-        default-provider: kf5-5-105-qt-5-15-9-core22
-        target: $SNAP/kf5
 
 slots:
   feathernotes:
@@ -40,8 +17,7 @@ slots:
 apps:
   feathernotes:
     command: usr/bin/feathernotes
-    extensions:
-      - kde-neon
+    extensions: [gnome]
     plugs:
       - home
       - raw-usb
@@ -60,8 +36,6 @@ parts:
     parse-info: [usr/share/metainfo/feathernotes.metainfo.xml]
     cmake-parameters:
       - -DCMAKE_INSTALL_PREFIX=/usr
-    build-snaps:
-      - kf5-5-104-qt-5-15-8-core22-sdk  
     build-packages:
       - build-essential
       - libxext-dev
