--- a/snapcraft.yaml
+++ b/snapcraft.yaml
@@ -17,7 +17,8 @@ slots:
 apps:
   feathernotes:
     command: usr/bin/feathernotes
-    extensions: [gnome]
+    extensions:
+      - kde-neon
     plugs:
       - home
       - raw-usb
@@ -35,18 +36,13 @@ parts:
     plugin: cmake
     parse-info: [usr/share/metainfo/feathernotes.metainfo.xml]
     cmake-parameters:
-      - -DCMAKE_INSTALL_PREFIX=/usr
+      - -DCMAKE_INSTALL_PREFIX=/usr  
     build-packages:
       - build-essential
       - libxext-dev
-      - qttools5-dev-tools
-      - libqt5svg5-dev
       - libhunspell-dev
-      - qtbase5-dev
-      - libqt5x11extras5-dev
       - libx11-dev
       - libxext-dev
-      - libqt5xml5
     override-pull: |
       craftctl default
       craftctl set version=$(git describe --tags --abbrev=0)
